[Build] Use Cucumber parent pom